# router/admin.go
@@ -7,11 +7,9 @@ import (
 )
 
 func setupAdminRoutes(c *controller.Controller, api *gin.RouterGroup) {
-	//api.GET("/get-users", c.GetUsers)
-	//api.POST("/create-user", c.CreateUser)
-	//api.GET("/get-user/:id", c.GetUserById)
-	//api.PUT("/update-user/:id", c.UpdateUserById)
-	//api.DELETE("/delete-user/:id", c.DeleteUserById)
+	api.GET("/get-users", c.GetUsers)
+	api.POST("/create-user", c.CreateUser)
+	api.GET("/get-login/:id", c.GetLogInUserById)
 
 
 	api.GET("/get-products", c.GetProducts)
